[tool.poetry]
name = "gur-ov/dev-tmux"
version = "2.0.0"
description = "Script for open tmux develop session"
authors = ["Mikhail Gurov <gurov.mobile@gmail.com>"]
license = "Creative Commons CC0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
